--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,12 +1,18 @@
         <footer>
+            <div class="icon-div">
+                <a class="social-logo" href="https://www.facebook.com/"><i class="fa-brands fa-facebook-f fa-xl"></i></a>
+                <a class="social-logo" href="https://twitter.com/"><i class="fa-brands fa-twitter fa-xl"></i></a>
+                <a class="social-logo" href="https://www.instagram.com/"><i class="fa-brands fa-instagram fa-xl"></i></a>
+            </div>
+            <div class="copyright">
+                &copy; Copyright Ping. All rights reserved.
+            </div>
             <div class="attribution">
                 Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
                 Coded by <a href="https://www.frontendmentor.io/profile/skozmi" target="_blank">Milos Mirkovic</a>.
             </div>
         </footer>
     </div>
-
-    <!-- <script src="public/js/script.js" charset="utf-8"></script> -->
     
     <!-- sript files for bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
