--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,8 +5,11 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!-- displays site properly based on user's device -->
-
+        
         <link rel="icon" type="image/png" sizes="32x32" href="public/images/favicon-32x32.png">
+        
+        <title>Frontend Mentor | Ping coming soon page</title>
+
 
 
         <title>Frontend Mentor | Base Apparel coming soon page</title>
@@ -20,7 +23,21 @@
         <!--google fonts-->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;600&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Libre+Franklin:wght@300;600;700&display=swap" rel="stylesheet">
+
+        <!--font awesome-->
+        <script src="https://kit.fontawesome.com/f214c5b1b7.js" crossorigin="anonymous"></script>
+    </head>
+
 
 <body>
-    <div>
+    <div class="container-fluid">
+        <nav class="navbar justify-content-center">
+            <a class="navbar-brand" href="">
+                <img class="logo-image" src="public/images/logo.svg" alt="logo">
+            </a>
+        </nav>
+        <header>
+            <h1 class="main-heading">We are launching <span>soon!</span></h1>
+            <p class="main-paragraph">Subscribe and get notified</p>
+        </header>
