--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,8 +1,8 @@
         <footer>
             <div class="icon-div">
-                <a class="social-logo" href="https://www.facebook.com/"><i class="fa-brands fa-facebook-f fa-xl"></i></a>
-                <a class="social-logo" href="https://twitter.com/"><i class="fa-brands fa-twitter fa-xl"></i></a>
-                <a class="social-logo" href="https://www.instagram.com/"><i class="fa-brands fa-instagram fa-xl"></i></a>
+                <a class="social-logo" href="https://www.facebook.com/" aria-label="Visit our Facebook"><i class="fa-brands fa-facebook-f fa-xl" aria-hidden="true"></i></a>
+                <a class="social-logo" href="https://twitter.com/" aria-label="Visit our Twitter"><i class="fa-brands fa-twitter fa-xl" aria-hidden="true"></i></a>
+                <a class="social-logo" href="https://www.instagram.com/" aria-label="Visit our Instagram"><i class="fa-brands fa-instagram fa-xl" aria-hidden="true"></i></a>
             </div>
             <div class="copyright">
                 &copy; Copyright Ping. All rights reserved.
